--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,13 +41,15 @@ jobs:
     - name: Deploy to Netlify
       run: |
         echo "Creating and deploying site: $DOMAIN"
-        # Create a new Netlify site
-        netlify sites:create --name "$DOMAIN" --account-slug calibertech875 --json > site.json
-        SITE_ID=$(cat site.json | jq -r '.id')
+        SITE_OUTPUT=$(netlify sites:create --name "$DOMAIN" --account-slug calibertech875 || true)
+        SITE_ID=$(echo "$SITE_OUTPUT" | grep -oP 'Site ID: \K[^\s]+')
+        if [ -z "$SITE_ID" ]; then
+          echo "Error: Failed to retrieve Site ID from Netlify output"
+          exit 1
+        fi
         echo "Created site with ID: $SITE_ID"
-
-        # Deploy the site to Netlify
-        netlify deploy --prod --dir=./dist --site="$SITE_ID" --auth="nfp_vz5TPB3KPcZokUTHYkh6j2FVRZZrSjzfc495"
-
+        netlify deploy --prod --dir=./dist --site="$SITE_ID"
+        
       env:
         NETLIFY_AUTH_TOKEN: nfp_vz5TPB3KPcZokUTHYkh6j2FVRZZrSjzfc495
+
