--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         node-version: 18
 
     - name: Install Dependencies
-      run: npm install --legacy-peer-deps
+      run: npm install
 
     - name: Build the Website
       run: npm run build
@@ -41,15 +41,8 @@ jobs:
     - name: Deploy to Netlify
       run: |
         echo "Creating and deploying site: $DOMAIN"
-        SITE_OUTPUT=$(netlify sites:create --name "$DOMAIN" --account-slug calibertech875 || true)
-        SITE_ID=$(echo "$SITE_OUTPUT" | grep -oP 'Site ID: \K[^\s]+')
-        if [ -z "$SITE_ID" ]; then
-          echo "Error: Failed to retrieve Site ID from Netlify output"
-          exit 1
-        fi
+        SITE_ID=$(netlify sites:create --name "$DOMAIN" --account-slug calibertech875 | grep -o "Site ID:  [a-zA-Z0-9-]*" | awk '{print $3}')
         echo "Created site with ID: $SITE_ID"
-        netlify deploy --prod --dir=./dist --site="$SITE_ID"
-        
+        netlify deploy --prod --dir=./dist --site="$SITE_ID" --auth="nfp_dmTjWcyc3W7KWMWepKDSnN2efxHq9kufe2f6"
       env:
-        NETLIFY_AUTH_TOKEN: nfp_vz5TPB3KPcZokUTHYkh6j2FVRZZrSjzfc495
-
+        NETLIFY_AUTH_TOKEN: nfp_dmTjWcyc3W7KWMWepKDSnN2efxHq9kufe2f6
